--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,7 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
+    position: relative;
     /*flex-wrap: nowrap;*/
 }
     .container{
@@ -195,3 +196,94 @@
     text-align: center;
     padding: 15px 0;
 }
+
+.circle{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;
+    right: 2%;
+    bottom: 2%;
+    line-height: 60px;
+    text-align: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.tabla{
+    width: 100%;
+    height: 100vh;
+    display: none;
+    background-color: rgba(0, 0, 0, .5);
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    animation: animationModal 1s;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.table__value{
+    width: 80%;
+    height: auto;
+}
+
+@keyframes animationModal{
+    from{ top: -500px; opacity: 0;}
+    to{top: 0px; opacity: 1;}
+}
+
+
+table{
+    border-collapse: collapse;
+    margin: 0 auto;
+}
+
+tr{
+    background-color: white;
+}
+
+th{
+    padding: 15px;
+}
+
+tr:hover{
+    background-color: #7cbd63;
+}
+
+thead tr, thead th{
+    background-color: #296385;
+    color: white;
+}
+
+.btn-calculo, .btn-cerrar{
+    padding: 10px 25px;
+    margin: 10px 15px;
+    border: 0;
+    color: white;
+    text-transform: uppercase;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+    transition: all .3s;
+}
+
+.btn-calculo{
+    background-color: green;
+}
+    .btn-calculo:hover{
+        background-color: rgba(0, 128, 0, .7);
+    }   
+
+.btn-cerrar{
+    background-color: red;
+}
+
+    .btn-cerrar:hover{
+        background-color: rgba(255, 0, 0, .7);
+    }
